fixed SMPC config

--- a/evaluation/fc_results/compare.ipynb
+++ b/evaluation/fc_results/compare.ipynb
@@ -9,64 +9,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-11 14:16:37,464 - INFO - Controller stopped successfully.\n",
-      "2024-08-11 14:16:37,465 - INFO - Starting the FeatureCloud controller with the data directory /home/yuliya/repos/cosybio/FedProt\n",
-      "Downloading...: 3it [00:00, 12421.43it/s]\n",
-      "2024-08-11 14:16:38,825 - INFO - Controller started successfully.\n",
-      "2024-08-11 14:16:38,826 - INFO - Waiting 3s to ensure the controller is properly running...\n",
-      "2024-08-11 14:16:41,827 - INFO - Controller started in 4 seconds.\n",
-      "2024-08-11 14:16:41,828 - INFO - Starting experiment:\n",
+      "2024-08-28 16:47:46,371 - INFO - Controller stopped successfully.\n",
+      "2024-08-28 16:47:46,372 - INFO - Starting the FeatureCloud controller with the data directory /home/yuliya/repos/cosybio/FedProt\n",
+      "Downloading...: 3it [00:00, 1609.07it/s]\n",
+      "2024-08-28 16:47:49,124 - INFO - Controller started successfully.\n",
+      "2024-08-28 16:47:49,124 - INFO - Waiting 3s to ensure the controller is properly running...\n",
+      "2024-08-28 16:47:52,125 - INFO - Controller started in 5 seconds.\n",
+      "2024-08-28 16:47:52,126 - INFO - Starting experiment:\n",
       "Experiment(clients=['/home/yuliya/repos/cosybio/FedProt/data/bacterial_data/balanced/lab_A', '/home/yuliya/repos/cosybio/FedProt/data/bacterial_data/balanced/lab_B', '/home/yuliya/repos/cosybio/FedProt/data/bacterial_data/balanced/lab_C', '/home/yuliya/repos/cosybio/FedProt/data/bacterial_data/balanced/lab_D', '/home/yuliya/repos/cosybio/FedProt/data/bacterial_data/balanced/lab_E'])\n",
-      "2024-08-11 14:17:06,270 - INFO - Test started successfully!\n",
-      "2024-08-11 14:17:54,331 - INFO - Test finished successfully!\n",
-      "2024-08-11 14:17:54,332 - INFO - Experiment finished successfully! Result files: ['results_test_1_client_0_fc_fedprot_941712513.zip', 'results_test_1_client_1_fc_fedprot_829567493.zip', 'results_test_1_client_2_fc_fedprot_431204114.zip', 'results_test_1_client_3_fc_fedprot_109861991.zip', 'results_test_1_client_4_fc_fedprot_682252290.zip']\n",
-      "2024-08-11 14:18:04,333 - INFO - Starting postprocessing...\n",
-      "2024-08-11 14:18:04,334 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
-      "2024-08-11 14:18:04,349 - INFO - Experiment finished in 1 min 22 sec.\n",
-      "2024-08-11 14:18:04,350 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n",
-      "2024-08-11 14:18:04,350 - INFO - Starting experiment:\n",
+      "2024-08-28 16:48:12,954 - INFO - Test started successfully!\n",
+      "2024-08-28 16:48:54,794 - INFO - Test finished successfully!\n",
+      "2024-08-28 16:48:54,795 - INFO - Experiment finished successfully! Result files: ['results_test_1_client_0_fc_fedprot_705500432.zip', 'results_test_1_client_1_fc_fedprot_719809003.zip', 'results_test_1_client_2_fc_fedprot_719255661.zip', 'results_test_1_client_3_fc_fedprot_668077020.zip', 'results_test_1_client_4_fc_fedprot_637359438.zip']\n",
+      "2024-08-28 16:49:04,795 - INFO - Starting postprocessing...\n",
+      "2024-08-28 16:49:04,796 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
+      "2024-08-28 16:49:04,815 - INFO - Experiment finished in 1 min 12 sec.\n",
+      "2024-08-28 16:49:04,816 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n",
+      "2024-08-28 16:49:04,817 - INFO - Starting experiment:\n",
       "Experiment(clients=['/home/yuliya/repos/cosybio/FedProt/data/TMT_data/01_smaller_lib_balanced_PG_MajorPG/Center1', '/home/yuliya/repos/cosybio/FedProt/data/TMT_data/01_smaller_lib_balanced_PG_MajorPG/Center2', '/home/yuliya/repos/cosybio/FedProt/data/TMT_data/01_smaller_lib_balanced_PG_MajorPG/Center3'])\n",
-      "2024-08-11 14:18:19,406 - INFO - Test started successfully!\n",
-      "2024-08-11 14:19:07,063 - INFO - Test finished successfully!\n",
-      "2024-08-11 14:19:07,064 - INFO - Experiment finished successfully! Result files: ['results_test_2_client_0_fc_fedprot_348060552.zip', 'results_test_2_client_1_fc_fedprot_241666909.zip', 'results_test_2_client_2_fc_fedprot_822510058.zip']\n",
-      "2024-08-11 14:19:17,065 - INFO - Starting postprocessing...\n",
-      "2024-08-11 14:19:17,066 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
-      "2024-08-11 14:19:17,072 - INFO - Experiment finished in 1 min 12 sec.\n",
-      "2024-08-11 14:19:17,075 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n",
-      "2024-08-11 14:19:17,076 - INFO - Starting experiment:\n",
+      "2024-08-28 16:49:18,052 - INFO - Test started successfully!\n",
+      "2024-08-28 16:49:59,153 - INFO - Test finished successfully!\n",
+      "2024-08-28 16:49:59,154 - INFO - Experiment finished successfully! Result files: ['results_test_2_client_0_fc_fedprot_599622634.zip', 'results_test_2_client_1_fc_fedprot_659172519.zip', 'results_test_2_client_2_fc_fedprot_722808224.zip']\n",
+      "2024-08-28 16:50:09,154 - INFO - Starting postprocessing...\n",
+      "2024-08-28 16:50:09,155 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
+      "2024-08-28 16:50:09,159 - INFO - Experiment finished in 1 min 4 sec.\n",
+      "2024-08-28 16:50:09,160 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n",
+      "2024-08-28 16:50:09,162 - INFO - Starting experiment:\n",
       "Experiment(clients=['/home/yuliya/repos/cosybio/FedProt/data/simulated_data/balanced/lab1', '/home/yuliya/repos/cosybio/FedProt/data/simulated_data/balanced/lab2', '/home/yuliya/repos/cosybio/FedProt/data/simulated_data/balanced/lab3'])\n",
-      "2024-08-11 14:19:33,133 - INFO - Test started successfully!\n",
-      "2024-08-11 14:20:25,919 - INFO - Test finished successfully!\n",
-      "2024-08-11 14:20:25,921 - INFO - Experiment finished successfully! Result files: ['results_test_3_client_0_fc_fedprot_611833107.zip', 'results_test_3_client_1_fc_fedprot_444220916.zip', 'results_test_3_client_2_fc_fedprot_532425093.zip']\n",
-      "2024-08-11 14:20:35,921 - INFO - Starting postprocessing...\n",
-      "2024-08-11 14:20:35,923 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
-      "2024-08-11 14:20:35,940 - INFO - Experiment finished in 1 min 18 sec.\n",
-      "2024-08-11 14:20:35,941 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n",
-      "2024-08-11 14:20:35,941 - INFO - Starting experiment:\n",
+      "2024-08-28 16:50:22,004 - INFO - Test started successfully!\n",
+      "2024-08-28 16:51:02,900 - INFO - Test finished successfully!\n",
+      "2024-08-28 16:51:02,900 - INFO - Experiment finished successfully! Result files: ['results_test_3_client_0_fc_fedprot_754419575.zip', 'results_test_3_client_1_fc_fedprot_711727414.zip', 'results_test_3_client_2_fc_fedprot_683925672.zip']\n",
+      "2024-08-28 16:51:12,901 - INFO - Starting postprocessing...\n",
+      "2024-08-28 16:51:12,902 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
+      "2024-08-28 16:51:12,921 - INFO - Experiment finished in 1 min 3 sec.\n",
+      "2024-08-28 16:51:12,921 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n",
+      "2024-08-28 16:51:12,922 - INFO - Starting experiment:\n",
       "Experiment(clients=['/home/yuliya/repos/cosybio/FedProt/data/simulated_data/mild_imbalanced/lab1', '/home/yuliya/repos/cosybio/FedProt/data/simulated_data/mild_imbalanced/lab2', '/home/yuliya/repos/cosybio/FedProt/data/simulated_data/mild_imbalanced/lab3'])\n",
-      "2024-08-11 14:20:50,937 - INFO - Test started successfully!\n",
-      "2024-08-11 14:21:45,166 - INFO - Test finished successfully!\n",
-      "2024-08-11 14:21:45,167 - INFO - Experiment finished successfully! Result files: ['results_test_4_client_0_fc_fedprot_889548916.zip', 'results_test_4_client_1_fc_fedprot_566627978.zip', 'results_test_4_client_2_fc_fedprot_323326851.zip']\n",
-      "2024-08-11 14:21:55,168 - INFO - Starting postprocessing...\n",
-      "2024-08-11 14:21:55,170 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
-      "2024-08-11 14:21:55,189 - INFO - Experiment finished in 1 min 19 sec.\n",
-      "2024-08-11 14:21:55,190 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n",
-      "2024-08-11 14:21:55,192 - INFO - Starting experiment:\n",
+      "2024-08-28 16:51:25,691 - INFO - Test started successfully!\n",
+      "2024-08-28 16:52:04,591 - INFO - Test finished successfully!\n",
+      "2024-08-28 16:52:04,591 - INFO - Experiment finished successfully! Result files: ['results_test_4_client_0_fc_fedprot_495591204.zip', 'results_test_4_client_1_fc_fedprot_440639367.zip', 'results_test_4_client_2_fc_fedprot_377745475.zip']\n",
+      "2024-08-28 16:52:14,592 - INFO - Starting postprocessing...\n",
+      "2024-08-28 16:52:14,593 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
+      "2024-08-28 16:52:14,604 - INFO - Experiment finished in 1 min 1 sec.\n",
+      "2024-08-28 16:52:14,605 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n",
+      "2024-08-28 16:52:14,605 - INFO - Starting experiment:\n",
       "Experiment(clients=['/home/yuliya/repos/cosybio/FedProt/data/simulated_data/imbalanced/lab1', '/home/yuliya/repos/cosybio/FedProt/data/simulated_data/imbalanced/lab2', '/home/yuliya/repos/cosybio/FedProt/data/simulated_data/imbalanced/lab3'])\n",
-      "2024-08-11 14:22:13,861 - INFO - Test started successfully!\n",
-      "2024-08-11 14:23:07,800 - INFO - Test finished successfully!\n",
-      "2024-08-11 14:23:07,801 - INFO - Experiment finished successfully! Result files: ['results_test_5_client_0_fc_fedprot_544373042.zip', 'results_test_5_client_1_fc_fedprot_441831186.zip', 'results_test_5_client_2_fc_fedprot_605736908.zip']\n",
-      "2024-08-11 14:23:17,802 - INFO - Starting postprocessing...\n",
-      "2024-08-11 14:23:17,803 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
-      "2024-08-11 14:23:17,823 - INFO - Experiment finished in 1 min 22 sec.\n",
-      "2024-08-11 14:23:17,824 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n"
+      "2024-08-28 16:52:27,679 - INFO - Test started successfully!\n",
+      "2024-08-28 16:53:07,541 - INFO - Test finished successfully!\n",
+      "2024-08-28 16:53:07,542 - INFO - Experiment finished successfully! Result files: ['results_test_5_client_0_fc_fedprot_426760570.zip', 'results_test_5_client_1_fc_fedprot_386675256.zip', 'results_test_5_client_2_fc_fedprot_359171643.zip']\n",
+      "2024-08-28 16:53:17,542 - INFO - Starting postprocessing...\n",
+      "2024-08-28 16:53:17,544 - INFO - Results will be saved in: /home/yuliya/repos/cosybio/FedProt/evaluation/fc_results\n",
+      "2024-08-28 16:53:17,553 - INFO - Experiment finished in 1 min 2 sec.\n",
+      "2024-08-28 16:53:17,554 - INFO - _______________¡SUCCESSFUL_EXPERIMENT!_______________\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -151,24 +151,24 @@
       "\tNumber of proteins:  2549 \n",
       "\tNumber of samples:  24 \n",
       "\n",
-      "Dataset:  lab_E \n",
-      "\tNumber of proteins:  2644 \n",
+      "Dataset:  lab_D \n",
+      "\tNumber of proteins:  2865 \n",
       "\tNumber of samples:  48 \n",
       "\n",
-      "Dataset:  lab_D \n",
-      "\tNumber of proteins:  2889 \n",
-      "\tNumber of samples:  72 \n",
+      "Dataset:  lab_B \n",
+      "\tNumber of proteins:  3006 \n",
+      "\tNumber of samples:  71 \n",
       "\n",
       "Dataset:  lab_C \n",
-      "\tNumber of proteins:  2990 \n",
-      "\tNumber of samples:  95 \n",
+      "\tNumber of proteins:  3048 \n",
+      "\tNumber of samples:  94 \n",
       "\n",
-      "Dataset:  lab_B \n",
+      "Dataset:  lab_E \n",
       "\tNumber of proteins:  3059 \n",
       "\tNumber of samples:  118 \n",
       "\n",
       "Levels of condition:  Glu Pyr \n",
-      "Levels of lab:  lab_A lab_E lab_D lab_C lab_B \n",
+      "Levels of lab:  lab_A lab_D lab_B lab_C lab_E \n",
       "Filtering by condition - two not-NA per condition\n",
       "\tBefore filtering: 3059 102 \n",
       "\tAfter filtering: 2831 102 \n",
@@ -261,8 +261,7 @@
    "source": [
     "%%bash\n",
     "# run R script \n",
-    "\n",
-    "Rscript central_run.R \"lab_A,lab_E,lab_D,lab_C,lab_B\" \"Center1,Center2,Center3\" \"lab1,lab2,lab3\""
+    "Rscript central_run.R \"lab_A,lab_D,lab_B,lab_C,lab_E\" \"Center1,Center2,Center3\" \"lab1,lab2,lab3\""
    ]
   },
   {
@@ -274,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,19 +298,19 @@
     "    return df1, df2\n",
     "\n",
     "def compute_statistics(differences):\n",
-    "    min_diff = np.min(differences)\n",
-    "    mean_diff = np.mean(differences)\n",
-    "    max_diff = np.max(differences)\n",
+    "    min_diff = np.min(np.abs(differences))\n",
+    "    mean_diff = np.mean(np.abs(differences))\n",
+    "    max_diff = np.max(np.abs(differences))\n",
     "    return min_diff, mean_diff, max_diff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_differences(file1, file2):\n",
+    "def calculate_differences(file1, file2, log_diff=False):\n",
     "    df1 = read_tsv(file1)\n",
     "    df2 = read_tsv(file2)\n",
     "        \n",
@@ -335,15 +334,18 @@
     "        print(f\"Shape of {file2}: {df2.shape}\")\n",
     "        raise ValueError(\"Files do not have the same dimensions after alignment.\")\n",
     "\n",
-    "\n",
     "    aligned_df1, aligned_df2 = align_dataframes(df1, df2)\n",
-    "    differences = np.abs(aligned_df1.values - aligned_df2.values)\n",
+    "    if log_diff:\n",
+    "        print('log_diff')\n",
+    "        aligned_df1 = -np.log10(aligned_df1)\n",
+    "        aligned_df2 = -np.log10(aligned_df2)\n",
+    "    differences = aligned_df1.values - aligned_df2.values\n",
     "    return differences\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -354,32 +356,7 @@
       "sca.adj.pval\n",
       "adj.P.Val\n",
       "adj.P.Val\n",
-      "adj.P.Val\n",
-      "Results for DEP_bacterial_CENTRAL.tsv and DEP_bacterial_FEDERATED.tsv\n",
-      "min     0.000000e+00\n",
-      "mean    1.815409e-14\n",
-      "max     8.625323e-13\n",
-      "dtype: float64\n",
-      "Results for DEP_TMT_CENTRAL.tsv and DEP_TMT_FEDERATED.tsv\n",
-      "min     0.000000e+00\n",
-      "mean    3.292986e-14\n",
-      "max     5.742073e-13\n",
-      "dtype: float64\n",
-      "Results for DEP_simulBal_CENTRAL.tsv and DEP_simulBal_FEDERATED.tsv\n",
-      "min     0.000000e+00\n",
-      "mean    4.419973e-15\n",
-      "max     6.461498e-14\n",
-      "dtype: float64\n",
-      "Results for DEP_simulMildImbal_CENTRAL.tsv and DEP_simulMildImbal_FEDERATED.tsv\n",
-      "min     0.000000e+00\n",
-      "mean    9.322888e-15\n",
-      "max     8.482104e-14\n",
-      "dtype: float64\n",
-      "Results for DEP_simuImb_CENTRAL.tsv and DEP_simuImb_FEDERATED.tsv\n",
-      "min     0.000000e+00\n",
-      "mean    2.466595e-14\n",
-      "max     4.886092e-13\n",
-      "dtype: float64\n"
+      "adj.P.Val\n"
      ]
     }
    ],
@@ -396,6 +373,7 @@
     "for file1, file2 in file_pairs:\n",
     "    try:\n",
     "        differences = calculate_differences(file1, file2)\n",
+    "        # differences = calculate_differences(file1, file2, log_diff=True)\n",
     "        min_diff, mean_diff, max_diff = compute_statistics(differences)\n",
     "        results[(file1, file2)] = {\n",
     "            'min': min_diff,\n",
@@ -403,22 +381,54 @@
     "            'max': max_diff\n",
     "        }\n",
     "    except Exception as e:\n",
-    "        results[(file1, file2)] = str(e)\n",
-    "\n",
+    "        results[(file1, file2)] = str(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results for DEP_bacterial_CENTRAL.tsv and DEP_bacterial_FEDERATED.tsv\n",
+      "min     0.00E+00\n",
+      "mean    1.92E-14\n",
+      "max     6.82E-13\n",
+      "dtype: object\n",
+      "Results for DEP_TMT_CENTRAL.tsv and DEP_TMT_FEDERATED.tsv\n",
+      "min     0.00E+00\n",
+      "mean    3.41E-14\n",
+      "max     5.09E-13\n",
+      "dtype: object\n",
+      "Results for DEP_simulBal_CENTRAL.tsv and DEP_simulBal_FEDERATED.tsv\n",
+      "min     0.00E+00\n",
+      "mean    4.74E-15\n",
+      "max     6.41E-14\n",
+      "dtype: object\n",
+      "Results for DEP_simulMildImbal_CENTRAL.tsv and DEP_simulMildImbal_FEDERATED.tsv\n",
+      "min     0.00E+00\n",
+      "mean    1.01E-14\n",
+      "max     1.16E-13\n",
+      "dtype: object\n",
+      "Results for DEP_simuImb_CENTRAL.tsv and DEP_simuImb_FEDERATED.tsv\n",
+      "min     0.00E+00\n",
+      "mean    2.00E-14\n",
+      "max     2.41E-13\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
     "for pair, stats in results.items():\n",
     "    # format the stats as a table\n",
     "    if isinstance(stats, dict):\n",
     "        stats = pd.Series(stats)\n",
     "    print(f\"Results for {pair[0]} and {pair[1]}\")\n",
-    "    print(stats)"
+    "    print(stats.apply(lambda x: f'{x:.2E}'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
